--- a/2_c/package.json
+++ b/2_c/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "1_c",
+  "name": "2_c",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
